# llm-monorepo

./: README.md
.github/prompts/: python-coding-standards.prompt.md
.github/skills/python-coding-standards/: SKILL.md
chat-tui/: justfile  main.py  pyproject.toml
chat-tui/src/chat_tui/: app.py  chat_history.py  chat_message.py  styles.tcss  user_input.py
chat-tui/src/chat_tui/prompts/: system.md
local-llm/: pyproject.toml
local-llm/src/local_llm/request/: __init__.py  message.py  request.py
local-llm/src/local_llm/response/: models.py
local-llm/src/local_llm/tools/: __init__.py  call.py  models.py  registry.py
notes-tui/: main.py  pyproject.toml
notes-tui/src/notes_tui/: app.py  styles.tcss
workflows/: .gitignore  pyproject.toml
workflows/src/workflows/: main.py
workflows/src/workflows/llm/: __init__.py  llm.py  models.py  tools.py
workflows/src/workflows/utils/: user_input.py
