[project]
name = "chat-tui"
version = "0.1.0"
description = "A simple TUI chat interface for chatting with a local LLM."
readme = "README.md"
authors = [
    { name = "Jim Hoekstra" }
]
requires-python = ">=3.13"
dependencies = [
    "textual[syntax]>=8.2.3",
    "textual-dev>=1.8.0",
    "local-llm",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.uv.sources]
local-llm = { path = "../local-llm", editable = true }
