[project]
name = "local-llm"
version = "0.1.0"
description = "A library for interacting with a locally running LLM."
readme = "README.md"
authors = [
    { name = "Jim Hoekstra" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "textual>=8.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
