[project]
name = "notes-tui"
version = "0.1.0"
description = "A TUI for keeping notes."
readme = "README.md"
authors = [
    { name = "Jim Hoekstra" }
]
requires-python = ">=3.13"
dependencies = [
    "local-llm",
    "textual-dev>=1.8.0",
    "textual[syntax]>=8.2.3",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.uv.sources]
local-llm = { path = "../local-llm", editable = true }
