[project]
name = "workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jim Hoekstra" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "pydantic>=2.13.3",
    "rich>=15.0.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"